@@ -5,7 +5,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ReaderServiceImpl implements ReaderService {
     @Override
@@ -13,7 +12,7 @@ public class ReaderServiceImpl implements ReaderService {
         try {
             return Files
                     .lines(Path.of(path))
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             throw new RuntimeException("Can't read the file: " + path, e);
         }
